--- a/README
+++ b/README
@@ -1,3 +1,42 @@
+# oc_lora_gw_pf_dev
+
+## Install Procedure
+
+
+```
+
+#RAK831
+curl -s https://api.github.com/repos/OpenChirp/oc_lora_gw_pf_dev/releases/latest \
+| grep "browser_download_url.*RAK831.*deb" \
+| cut -d : -f 2,3 \
+| tr -d \" \
+| wget -i -
+
+#RHF0M301
+curl -s https://api.github.com/repos/OpenChirp/oc_lora_gw_pf_dev/releases/latest \
+| grep "browser_download_url.*RHF0M301.*deb" \
+| cut -d : -f 2,3 \
+| tr -d \" \
+| wget -i -
+
+# Blowfish
+curl -s https://api.github.com/repos/OpenChirp/oc_lora_gw_pf_dev/releases/latest \
+| grep "browser_download_url.*Blowfish.*deb" \
+| cut -d : -f 2,3 \
+| tr -d \" \
+| wget -i -
+
+
+sudo apt update
+sudo dpkg -i oc-lora-gw-pf-dev_*.deb
+sudo apt-get install -fy
+rm oc-lora-gw-pf-dev*.deb
+
+```
+
+
+
+
 # Pins
 
 ## Blowfish
